k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-1-service
  namespace: wisecow-1
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 4499
      protocol: TCP
  selector:
    app: wisecow-1
