k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  namespace: wisecow
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - af4328d2f713b49b786f5264d960e835-8a28e4ccb8871d30.elb.us-east-1.amazonaws.com
    secretName: wisecow-tls

  rules:
  - host: af4328d2f713b49b786f5264d960e835-8a28e4ccb8871d30.elb.us-east-1.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-service
            port:
              number: 80
