k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  namespace: wisecow-1       # <-- correct namespace
  annotations:
    kubernetes.io/ingress.class: alb
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
spec:
  rules:
    - host: naveenmarathi.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wisecow-1-service
                port:
                  number: 80
  tls:
    - hosts:
        - naveenmarathi.xyz
      secretName: wisecow-tls
